Fixed sidebar overflow of children elements

--- a/src/components/RecipeList/RecipeList.module.css
+++ b/src/components/RecipeList/RecipeList.module.css
@@ -2,7 +2,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: var(--bg-color);
 }
 
 .list {
