--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -33,6 +33,7 @@
   width: 100%;
   height: 50%;
   background-color: var(--bg-color);
+  border-top-right-radius: var(--border-radius);
   filter: brightness(90%);
 }
 
@@ -64,6 +65,7 @@
 .tab:nth-child(2) {
   border-bottom-left-radius: var(--border-radius);
   border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
 }
 
 .tab.active {
